Using  sealed interfaces